overflow height fix

--- a/src/Blackboard.css
+++ b/src/Blackboard.css
@@ -139,6 +139,8 @@
 }
 
 
-#blackboard {
+.blackboard {
     height: 93vh;
+    overflow: hidden;
+
 }
